# webify-cpp

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
.github/workflows/: build.yml  ci.yml
include/: font.h  generators.h  parser.h  utils.h
src/: eot.cpp  font.cpp  main.cpp  parser.cpp  svg.cpp  svg_libxml2.cpp  utils.cpp  woff.cpp  woff2.cpp
